@@ -28,7 +28,7 @@ The project's page is at http://winni.vdr-developer.org/epgsearch
 #include <vdr/tools.h>
 #include "epgsearchext.h"
 
-class cEpgsearchServiceHandler: public cServiceHandler_v1_1
+class cEpgsearchServiceHandler: public cServiceHandler_v1_2
 {
     virtual std::list<std::string> TranslateResults(cSearchResults* pCompleteSearchResults);
  public:
@@ -46,6 +46,8 @@ class cEpgsearchServiceHandler: public cServiceHandler_v1_1
     virtual bool WriteSetupValue(const std::string& entry, const std::string& value);
     virtual std::list<std::string> TimerConflictList(bool relOnly=false);    
     virtual bool IsConflictCheckAdvised();    
+    virtual std::set<std::string> ShortDirectoryList();
+    virtual std::string Evaluate(const std::string& expr, const cEvent* event);
 };
 
 #endif
